# wfm-synthetic-data-lab

./: README.md  pyproject.toml  requirements.txt  spc_schema.json
data/reference/samples/: vAccrualBalance.sample.csv  vDimBusinessStructure.sample.csv  vTimecardTotal.sample.csv
docs/: pack_contract.md
profiles/: vAccrualBalance.profile.json  vDimBusinessStructure.profile.json  vTimecardTotal.profile.json
scenarios/: baptist_south_fl.yaml  tiny_hospital_smoke.yaml
schemas/: README.md
schemas/snapshots/: vAccrualBalance.schema.json  vDimBusinessStructure.schema.json  vTimecardTotal.schema.json
schemas/v1.1/tables/: employee.yaml  labor_daily.yaml  org_unit.yaml  pay_code.yaml  schedule.yaml  timecard.yaml
scripts/: bootstrap_demo.ps1  bootstrap_demo.sh  ci_demo_smoke.ps1  ci_demo_smoke.sh  setup_venv.ps1  setup_venv.sh
tools/: build_profiles.py  doctor.py  extract_schema.py  generate.py  generate_any.py
wfm_synth/: __init__.py  __main__.py  business_structure.py  cli.py  column_mapper.py  config.py  fillers.py  generate_accrual_balance.py  generate_dim_business_structure.py  generate_timecard_total.py  health_checks.py  ids.py  pack_generator.py  people.py  profiles.py  registry.py  run_pack.py  schema_registry.py  schema_utils.py  seed.py  spc_config.py  typed_values.py  validator.py
wfm_synthetic_data_lab.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
