[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wfm-synthetic-data-lab"
version = "0.1.0"
description = "Schema-driven synthetic data generator for UKG Pro WFM / DataHub-style tables."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brandon Johnson" }]
dependencies = [
  "faker>=25.0.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.1",
  "openpyxl>=3.1.2",
]

[project.scripts]
wfm-synth = "wfm_synth.cli:main"

[tool.setuptools]
packages = ["wfm_synth"]
